fixed error message in settings.js with too large iamge

--- a/frontend/app/src/static/css/index.css
+++ b/frontend/app/src/static/css/index.css
@@ -14,13 +14,11 @@ body {
   flex-direction: column;
   display: flex;
 
-  width: 100dvw;
-  height: 100dvh;
-  max-width:100%;
-  max-height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
-  
+
   background-color: white;
   padding: 0;
   margin: 0;
@@ -102,11 +100,11 @@ body {
   height: 150px !important;
   width: 800px !important;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   opacity: 0;
   z-index: 15;
   margin: 0;
@@ -136,4 +134,4 @@ body {
   width: 65%;
 }
 
- 
+
